--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
 <div id="wrap">
   <div id="UserInput">
-    <button id="ButtonAction" class="blueButton">Go</button>
+    <button id="ButtonAction" class="btn btn-blue">Go</button>
 
     <div class="row">
-      <div id="LengthsNeeded" class="col-xs-6 panel-group">
+      <div id="LengthsNeeded" class="col-sm-6 panel-group">
         <div class="panel-heading">Lengths Needed</div>
         <div id="CutList" class="panel"></div>
         <div class="panel-footer row">
-          <button id="ButtonAddCutRow" class="greenButton col-xs-3">Add Row</button>
-          <button id="ButtonRemoveCutRow" class="redButton col-xs-3">Remove Row</button>
+          <button id="ButtonAddCutRow" class="btn btn-green">Add Row</button>
+          <button id="ButtonRemoveCutRow" class="btn btn-red">Remove Row</button>
         </div>
 
       </div>
 
-      <div id="LengthsInStock" class="col-xs-6 panel-group">
+      <div id="LengthsInStock" class="col-sm-6 panel-group">
         <div class="panel-heading">Lengths In Stock</div>
         <div id="StockList" class="panel"></div>
         <div class="panel-footer row">
-          <button id="ButtonAddStockRow" class="greenButton col-xs-3">Add Row</Button>
-          <button id="ButtonRemoveStockRow" class="redButton col-xs-3">Remove Row</button>
+          <button id="ButtonAddStockRow" class="btn btn-green">Add Row</Button>
+          <button id="ButtonRemoveStockRow" class="btn btn-red">Remove Row</button>
         </div>
       </div>
 
@@ -38,7 +38,7 @@
   </div>
 
   <div id="Results">
-    <button id="ButtonRestart" class="blueButton">Restart</button>
+    <button id="ButtonRestart" class="btn btn-blue">Restart</button>
     <div id="ResultList"></div>
 
   </div>
@@ -53,6 +53,7 @@
 <script src="./scripts/class.js"></script>
 <script src="./scripts/calc.js"></script>
 <script src="./scripts/page.js"></script>
+<script src="./scripts/jquery.validate.min.js"></script>
 <script src="./scripts/tests.js"></script>
 </body>
 </html>
