--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
   <div id="Results">
     <button id="ButtonRestart" class="btn btn-blue">Restart</button>
     <div id="ResultList"></div>
-
   </div>
-
 </div>
 
 <input type="hidden" id="HiddenCutIndex" />
@@ -50,10 +48,11 @@
 <input type="hidden" id="HiddenResultSetIndex" />
 
 <script src="./scripts/jquery.js"></script>
+<script src="./scripts/library.js"></script>
 <script src="./scripts/class.js"></script>
 <script src="./scripts/calc.js"></script>
+<script src="./scripts/validation.js"></script>
 <script src="./scripts/page.js"></script>
-<script src="./scripts/jquery.validate.min.js"></script>
 <script src="./scripts/tests.js"></script>
 </body>
 </html>
