--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -15,22 +15,36 @@
     <button id="ButtonAction" class="btn btn-blue">Go</button>
 
     <div class="row">
-      <div id="LengthsNeeded" class="col-sm-6 panel-group">
-        <div class="panel-heading">Lengths Needed</div>
+      <div id="LengthsNeeded" class="col-xs-12 col-sm-6 panel-group">
+        <div class="panel-heading row bold">
+          Lengths Needed
+          <div class="row">
+            <div class="col-xs-3">Quantity</div>
+            <div class="col-xs-3">Length</div>
+            <div class="col-xs-6">Label</div>
+          </div>
+        </div>
         <div id="CutList" class="panel"></div>
-        <div class="panel-footer row">
-          <button id="ButtonAddCutRow" class="btn btn-green">Add Row</button>
-          <button id="ButtonRemoveCutRow" class="btn btn-red">Remove Row</button>
+        <div class="panel-heading row">
+          <button id="ButtonAddCutRow" class="btn btn-green">Add</button>
+          <button id="ButtonRemoveCutRow" class="btn btn-red">Remove</button>
         </div>
 
       </div>
 
-      <div id="LengthsInStock" class="col-sm-6 panel-group">
-        <div class="panel-heading">Lengths In Stock</div>
+      <div id="LengthsInStock" class="col-xs-12 col-sm-6 panel-group">
+        <div class="panel-heading row bold">
+          Lengths In Stock
+          <div class="row">
+            <div class="col-xs-3">Quantity</div>
+            <div class="col-xs-3">Length</div>
+            <div class="col-xs-6">Label</div>
+          </div>
+        </div>
         <div id="StockList" class="panel"></div>
-        <div class="panel-footer row">
-          <button id="ButtonAddStockRow" class="btn btn-green">Add Row</Button>
-          <button id="ButtonRemoveStockRow" class="btn btn-red">Remove Row</button>
+        <div class="panel-heading row">
+          <button id="ButtonAddStockRow" class="btn btn-green">Add</Button>
+          <button id="ButtonRemoveStockRow" class="btn btn-red">Remove</button>
         </div>
       </div>
 
