--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -22,9 +22,9 @@
         <div class="panel-heading row bold">
           Lengths Needed
           <div class="row">
-            <div class="col-xs-3">Quantity</div>
-            <div class="col-xs-3">Length</div>
-            <div class="col-xs-6">Label</div>
+            <div class="col-xs-3 col-wide">Quantity</div>
+            <div class="col-xs-4 col-wide">Length</div>
+            <div class="col-xs-5 col-wide">Label</div>
           </div>
         </div>
         <div id="CutList" class="panel"></div>
@@ -39,9 +39,9 @@
         <div class="panel-heading row bold">
           Lengths In Stock
           <div class="row">
-            <div class="col-xs-3">Quantity</div>
-            <div class="col-xs-3">Length</div>
-            <div class="col-xs-6">Label</div>
+            <div class="col-xs-3 col-wide">Quantity</div>
+            <div class="col-xs-4 col-wide">Length</div>
+            <div class="col-xs-5 col-wide">Label</div>
           </div>
         </div>
         <div id="StockList" class="panel"></div>
