add cutLoss field and change var to let

--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -32,7 +32,12 @@
           <button id="ButtonAddCutRow" class="btn btn-green">Add</button>
           <button id="ButtonRemoveCutRow" class="btn btn-red">Remove</button>
         </div>
-
+        <div class="panel-heading row">
+          <div class="col-xs-4 col-wide text-right">Loss per cut</div>
+          <div class="col-xs-3 col-wide">
+            <input type="text" id="TextBoxCutLoss" name="TextBoxCutLoss" class="form-control posnumeric" value="0"/>
+          </div>
+        </div>
       </div>
 
       <div id="LengthsInStock" class="col-xs-12 col-sm-6 panel-group">
