--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -15,8 +15,10 @@
 <body>
 <div id="wrap">
   <div id="UserInput">
-    <button id="ButtonAction" class="btn btn-blue">Go</button>
-
+    <div class="row">
+      <button id="ButtonAction" class="btn btn-blue">Go</button>
+      <button id="ButtonReset" class="btn btn-blue">Reset</button>
+    </div>
     <div class="row">
       <div id="LengthsNeeded" class="col-xs-12 col-sm-6 panel-group">
         <div class="panel-heading row bold">
@@ -29,8 +31,8 @@
         </div>
         <div id="CutList" class="panel"></div>
         <div class="panel-heading row">
-          <button id="ButtonAddCutRow" class="btn btn-green">Add</button>
-          <button id="ButtonRemoveCutRow" class="btn btn-red">Remove</button>
+          <button id="ButtonAddCutRow" class="btn btn-green btn-small">+</button>
+          <button id="ButtonRemoveCutRow" class="btn btn-red btn-small">-</button>
         </div>
         <div class="panel-heading row">
           <div class="col-xs-4 col-wide text-right">Loss per cut</div>
@@ -51,8 +53,8 @@
         </div>
         <div id="StockList" class="panel"></div>
         <div class="panel-heading row">
-          <button id="ButtonAddStockRow" class="btn btn-green">Add</Button>
-          <button id="ButtonRemoveStockRow" class="btn btn-red">Remove</button>
+          <button id="ButtonAddStockRow" class="btn btn-green btn-small">+</Button>
+          <button id="ButtonRemoveStockRow" class="btn btn-red btn-small">-</button>
         </div>
       </div>
 
