create state object

--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -66,10 +66,7 @@
     <div id="ResultList"></div>
   </div>
 </div>
-
-<input type="hidden" id="HiddenCutIndex" />
-<input type="hidden" id="HiddenStockIndex" />
-<input type="hidden" id="HiddenResultSetIndex" />
+<input type="hidden" id="State" value="{}" />
 
 <script src="./scripts/jquery.js"></script>
 <script src="./scripts/library.js"></script>
