--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -60,6 +60,7 @@
 
     </div>
   </div>
+  <div id="Error" class="alert alert-danger" role="alert"></div>
 
   <div id="Results">
     <button id="ButtonRestart" class="btn btn-blue">Restart</button>
