add print button

--- a/Cut Calculator.html
+++ b/Cut Calculator.html
@@ -9,7 +9,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-  <link href="./css/bootstrap.css" rel="stylesheet" />
+  <link href="./css/bootstrap.min.css" rel="stylesheet" />
   <link href="./css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -64,6 +64,9 @@
 
   <div id="Results">
     <button id="ButtonRestart" class="btn btn-blue">Restart</button>
+    <button id="ButtonPrint" class="btn btn-default pull-right" aria-label="Print">
+      <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+    </button>
     <div id="ResultList"></div>
   </div>
 </div>
